--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -32,4 +32,5 @@ hibernate.ogm.datastore.provider=org.hibernate.ogm.datastore.cassandra.impl.Cass
 #hibernate.ogm.datastore.provider=org.hibernate.ogm.datastore.infinispan.impl.InfinispanDatastoreProvider
 hibernate.ogm.cassandra.url=jdbc:cassandra://localhost:9160
 hibernate.ogm.cassandra.default_keyspace=keyspace2
-hibernate.hbm2ddl.auto=create-drop
+#hibernate.hbm2ddl.auto=create
+hibernate.ogm.cassandra.autogenerate=create
