--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -32,3 +32,4 @@ log4j.rootLogger=trace, stdout
 
 log4j.logger.org.hibernate=info
 log4j.logger.com.arjuna=info
+log4j.logger.org.hibernate.ogm.datastore.access=trace
